    installing stop init.d symlinks as eeepc-acpi-scripts init.d script
    doesn't need to be run during system shutdown
  * postinst: remove and re-install rc.d configuration
    fixing insserv warning about discrepancy between LSB init.d headers and
    the real situation. Thanks to Paul Menzel for reporting and Raphael
    Geissert for the fix.

  [ Andreas Schreiner ]
  * Fix WLAN toggle using fn-F2 on EeePC 900A. This EeePC model needs to
    load the pciehp kernel module with the pciehp_force=1 option up to kernel
    version 2.6.32. /etc/init.d/eeepc-acpi-script now checks if it is running
    on a 900A and loads the module accordingly.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Fri, 14 Aug 2009 13:10:21 +0100

eeepc-acpi-scripts (1.1.2) unstable; urgency=low

  [ Darren Salt ]
  * Add support for the 'super hybrid engine', which is accessible in kernel
    2.6.30-rc7 and later, and allow for automatic upclocking when on AC and
    downclocking when on battery (default is fastest/slowest).
  * Add an option for preferring to use the 'Master' control for volume
    control & muting. Off by default; normally takes effect while booting.
  * Don't run the init script on installation or upgrade; just while
    booting. This avoids altering current settings.
  * Make touchpad toggling into a bindable function.
  * Blacklist i2c_i801 (not needed, causes a long boot delay).

  [ Thiemo Nagel ]
  * Add support for GSM (3G) toggling, automatically chosing between rfkill
    and USB methods.
  * spelling fix in the default file
  * fix actions/wireless.sh usage message

  [ Damyan Ivanov ]
  * functions.sh: run screensaver-command as the logged in user

  [ Alan Jenkins ]
  * Remove old hacks for wireless toggle key
    There is no need to load/unload modules and ifconfig up/down the wireless
    interface. PCI hotplug takes care of it.

 -- Damyan Ivanov <dmn@debian.org>  Fri, 14 Aug 2009 14:52:18 +0300

eeepc-acpi-scripts (1.1.1) unstable; urgency=low
