@@ -21,6 +21,7 @@ eeepc-acpi-scripts (1.1.3) UNRELEASED; urgency=low
     fixing insserv warning about discrepancy between LSB init.d headers and
     the real situation. Thanks to Paul Menzel for reporting and Raphael
     Geissert for the fix.
+  * hotkey.sh/wireless.sh/functions.sh: wake up wicd on switching WiFi on
 
   [ Andreas Schreiner ]
   * Fix WLAN toggle using fn-F2 on EeePC 900A. This EeePC model needs to
